prost-unwrap-proto-tests/tests/ui/with_struct_invalid_fields.stderr
error: Argument must be an array of fields ident literals, e.g. `[field1, field2]`
  --> tests/ui/with_struct_invalid_fields.rs:11:21
   |
11 |     .with_struct(A, ""));
   |                     ^^
